update Java source and targets